k8s-configuration/domain.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: domain-deployment
  labels:
    app: domain
spec:
  replicas: 3
  selector:
    matchLabels:
      app: domain
  template:
    metadata:
      labels:
        app: domain
    spec:
      containers:
        - name: domain
          image: stockanalyzer-domain
          imagePullPolicy: Never
