k8s-configuration/gateway.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway-deployment
  labels:
    app: gateway
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gateway
  template:
    metadata:
      labels:
        app: gateway
    spec:
      containers:
        - name: gateway
          image: stockanalyzer-gateway
          imagePullPolicy: Never
          ports:
            - containerPort: 8080
            - containerPort: 9091
---
apiVersion: v1
kind: Service
metadata:
  name: gateway-service
spec:
  selector:
    app: gateway
  type: NodePort
  ports:
    - protocol: TCP
      name: rest
      port: 8080
      targetPort: 8080
      nodePort: 30080
    - protocol: TCP
      name: grpc
      port: 9091
      targetPort: 9091
      nodePort: 30091
