k8s-configuration/kafka.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: kafka
  name: kafka-headless
  namespace: kafka
spec:
  clusterIP: None
  clusterIPs:
    - None
  internalTrafficPolicy: Cluster
  ipFamilies:
    - IPv4
  ipFamilyPolicy: SingleStack
  ports:
    - name: tcp-kafka-int
      port: 9092
      protocol: TCP
      targetPort: tcp-kafka-int
    - name: tcp-kafka-ctrl
      port: 29093
      protocol: TCP
      targetPort: tcp-kafka-ctrl
  selector:
    app: kafka
  sessionAffinity: None
  type: ClusterIP
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    app: kafka
  name: kafka
  namespace: kafka
spec:
  podManagementPolicy: Parallel
  replicas: 3
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: kafka
  serviceName: kafka-headless
  template:
    metadata:
      labels:
        app: kafka
    spec:
      serviceAccountName: kafka
      containers:
        - command:
            - sh
            - -exc
            - |
              export CLUSTER_ID="6PMpHYL9QkeyXRj9Nrp4KA" && \
              export KAFKA_NODE_ID=${HOSTNAME##*-} 
              export KAFKA_ADVERTISED_LISTENERS=PLAINTEXT://${POD_NAME}.kafka-headless.kafka.svc.cluster.local:9092
              export KAFKA_CONTROLLER_QUORUM_VOTERS="0@kafka-0.kafka-headless.kafka.svc.cluster.local:29093,1@kafka-1.kafka-headless.kafka.svc.cluster.local:29093,2@kafka-2.kafka-headless.kafka.svc.cluster.local:29093" 
              
              exec /etc/confluent/docker/run
          name: kafka
          image: docker.io/confluentinc/confluent-local:7.5.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 9092
              name: tcp-kafka-int
              protocol: TCP
            - containerPort: 29093
              name: tcp-kafka-ctrl
              protocol: TCP
          resources:
            limits:
              cpu: "1"
              memory: 1400Mi
            requests:
              cpu: 250m
              memory: 512Mi
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            runAsGroup: 1000
            runAsUser: 1000
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          volumeMounts:
            - mountPath: /etc/kafka
              name: config
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext:
        fsGroup: 1000
      terminationGracePeriodSeconds: 30
      volumes:
        - emptyDir: { }
          name: config
  updateStrategy:
    type: RollingUpdate
