k8s-configuration/stockanalyzer.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: stockanalyzer
  labels:
    app: stockanalyzer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: stockanalyzer
  template:
    metadata:
      labels:
        app: stockanalyzer
    spec:
      containers:
        - name: stockanalyzer
          image: stockanalyzer-app
          imagePullPolicy: Never
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: stockanalyzer-service
spec:
  selector:
    app: stockanalyzer
  type: NodePort
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
      nodePort: 30003
